Agregado hipervinculo al menu Comprar tickets y corregidos los bordes en los inputs y textarea

--- a/index.html
+++ b/index.html
@@ -12,26 +12,21 @@
 </head>
 
 <body>
-    <div class="d-flex">
-        <div class="primeraparte justify-content-around primero">
+    <div class="d-flex colorgris justify-content-around primero align-items-center">
+        <div class="primeraparte ms-5 d-flex align-items-center">
             <img src="./assets/codoacodo.png" alt="imagen de codo a codo" class="codoacodo">
             <label class="confbsas">Conf Bs As</label>
         </div>
 
-        <div class="primero-labels d-flex">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-2 labels1">La conferencia</div>
-                    <div class="col-lg-2 labels">Los oradores</div>
-                    <div class="col-lg-2 labels">El lugar y la fecha</div>
-                    <div class="col-lg-2 labels">Conviértete en orador</div>
-                    <div class="col-lg-2 buytickets">Comprar tickets</div>
-                </div>
-            </div>
+        <div class="d-flex me-5">
+            <div class="ms-3 labels1">La conferencia</div>
+            <div class="ms-3 labels">Los oradores</div>
+            <div class="ms-3 labels">El lugar y la fecha</div>
+            <div class="ms-3 labels">Conviértete en orador</div>
+            <div class="ms-3"><a href="https://levsistemas.github.io/tp_integrador_javascript/"
+                    class="buytickets nav-link">Comprar tickets</a></div>
         </div>
-
     </div>
-
     <div>
         <section class="container1">
             <article>
@@ -60,57 +55,41 @@
             <article>
                 <div class="d-flex justify-content-center">
                     <div class="card" style="width: 22rem;height: 40rem;margin: 0px 20px;">
-
                         <img src="./assets/steve.jpg" class="card-img-top" alt="foto de card"
                             style="object-fit: cover;">
-
                         <div class="card-body">
                             <button type="button" class="btn btn-warning btn-sm cuadroJavaScript">JavaScript</button>
                             <button type="button" class="btn btn-info btn-sm cuadroReact">React</button>
                             <h5 class="card-title">Steve Jobs</h5>
-
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sed
                                 nostrum molestias beatae praesentium cumque atque quaerat tempora exercitationem in?
                             </p>
                         </div>
-
                     </div>
-
                     <div class="card" style="width: 22rem;height: 40rem;margin: 0px 20px;">
-
                         <img src="./assets/bill.jpg" class="card-img-top" alt="foto de card">
-
                         <div class="card-body">
                             <button type="button" class="btn btn-warning btn-sm cuadroJavaScript">JavaScript</button>
                             <button type="button" class="btn btn-info btn-sm cuadroReact">React</button>
                             <h5 class="card-title">Bill Gates</h5>
-
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sed
                                 nostrum molestias beatae praesentium cumque atque quaerat tempora exercitationem in?
                             </p>
                         </div>
-
                     </div>
 
                     <div class="card" style="width: 22rem;height: 40rem;margin: 0px 20px;">
-
                         <img src="./assets/ada.jpeg" class="card-img-top" alt="foto de card">
-
                         <div class="card-body">
                             <button type="button" class="btn btn-secondary btn-sm cuadroNegocios">Negocios</button>
                             <button type="button" class="btn btn-danger btn-sm cuadroStartups">Startups</button>
                             <h5 class="card-title">Ada Lovelace</h5>
-
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sed
                                 nostrum molestias beatae praesentium cumque atque quaerat tempora exercitationem in?
                             </p>
                         </div>
                     </div>
-
-
                 </div>
-
-
             </article>
         </section>
     </div>
@@ -124,13 +103,12 @@
             <p class="parrafodeladescripcionplaya">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
                 veritatis aspernatur suscipit provident quasi animi illum? Sed quos, quae eaque magni debitis ea quasi
                 facilis temporibus reprehenderit quibusdam? Iusto, vitae.</p>
-
             <button type="button" class="btn btn-outline-light m-2">Conocé más</button>
         </div>
     </div>
 
     <br>
-    
+
     <div style="width: 100%;" class="Hola">
         <div class="d-flex justify-content-center">
             <div class="justify-content-center cuadrito3" style="width: 40%">
@@ -141,8 +119,8 @@
                 <p class="parrafoorador">Anótate como orador para dar una <u
                         style="text-decoration-style: dotted;">charla ignite</u>. Cuéntanos de qué quieres hablar!</p>
                 <div class="d-flex justify-content-between">
-                    <input type="text" placeholder="Nombre" style="padding: 5px;" id="nombre">
-                    <input type="text" placeholder="Apellido" style="padding: 5px;" id="apellido">
+                    <input type="text" placeholder="Nombre" id="nombre">
+                    <input type="text" placeholder="Apellido" id="apellido">
                 </div>
                 <div class="">
                     <div>
